chore: update the README.md